<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Top App Bar / Toolbar -->
    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar_data"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:background="#B58668"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/arrow"
        app:title="How we process the data"
        app:titleTextColor="?attr/colorOnPrimary"/>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scroll_data_processing"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar_data"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">



            <!-- Intro -->
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dp_intro"
                android:textSize="14sp"
                style="@style/h2"
                android:lineSpacingExtra="2dp"
                android:layout_marginBottom="16dp" />

            <!-- Data Safety Section -->
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dp_safety_heading"
                android:textSize="18sp"
                style="@style/h4"
                android:textStyle="bold"
                android:layout_marginBottom="8dp" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dp_safety_body"
                android:textSize="14sp"
                style="@style/h2"
                android:lineSpacingExtra="3dp"
                android:layout_marginBottom="16dp" />

            <!-- Location Section -->
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dp_location_heading"
                android:textSize="18sp"
                style="@style/h4"
                android:textStyle="bold"
                android:layout_marginBottom="8dp" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dp_location_body"
                android:textSize="14sp"
                style="@style/h2"
                android:lineSpacingExtra="3dp"
                android:layout_marginBottom="16dp" />

            <!-- Usage Section -->
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dp_usage_heading"
                android:textSize="18sp"
                style="@style/h4"
                android:textStyle="bold"
                android:layout_marginBottom="8dp" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dp_usage_body"
                android:textSize="14sp"
                style="@style/h2"
                android:lineSpacingExtra="3dp"
                android:layout_marginBottom="16dp" />

            <!-- Sharing Section -->
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dp_sharing_heading"
                android:textSize="18sp"
                style="@style/h4"
                android:textStyle="bold"
                android:layout_marginBottom="8dp" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dp_sharing_body"
                android:textSize="14sp"
                style="@style/h2"
                android:lineSpacingExtra="3dp"
                android:layout_marginBottom="16dp" />

            <!-- User Control -->
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dp_control_heading"
                android:textSize="18sp"
                style="@style/h4"
                android:textStyle="bold"
                android:layout_marginBottom="8dp" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dp_control_body"
                android:textSize="14sp"
                style="@style/h2"
                android:lineSpacingExtra="3dp"
                android:layout_marginBottom="8dp" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/love"
                android:textSize="14sp"
                style="@style/h3"
                android:lineSpacingExtra="3dp"
                android:layout_marginBottom="8dp" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
